@startuml

title __ACTIVITY's Class Diagram__\n

  namespace com.redrum.todo {
    namespace activity {
      class com.redrum.todo.activity.MainActivity {
          {static} + handler : Handler
          ~ dateView : TextView
          ~ progressBar : ProgressBar
          ~ status : TextView
          - db : SQLiteDatabase
          - todoRecyclerView : RecyclerView
          + status_refresh()
          # onCreate()
          # onDestroy()
          # onPause()
          # onStop()
      }
    }
  }
  

  namespace com.redrum.todo {
    namespace activity {
      class com.redrum.todo.activity.SplashActivity {
          # onCreate()
      }
    }
  }
  

  namespace com.redrum.todo {
    namespace activity {
      class com.redrum.todo.activity.TodoAdd {
          + onOptionsItemSelected()
          # onCreate()
      }
    }
  }
  

  namespace com.redrum.todo {
    namespace activity {
      class com.redrum.todo.activity.TodoDetail {
          + onCreateOptionsMenu()
          + onOptionsItemSelected()
          # onCreate()
      }
    }
  }
  

  namespace com.redrum.todo {
    namespace activity {
      class com.redrum.todo.activity.TodoEdit {
          + onOptionsItemSelected()
          # onCreate()
      }
    }
  }
  

  com.redrum.todo.activity.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.redrum.todo.activity.MainActivity o-- com.redrum.todo.DBHelper : dbHelper
  com.redrum.todo.activity.MainActivity o-- com.redrum.todo.adapter.TodoAdapter : todoAdapter
  com.redrum.todo.activity.SplashActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.redrum.todo.activity.TodoAdd -up-|> androidx.appcompat.app.AppCompatActivity
  com.redrum.todo.activity.TodoDetail -up-|> androidx.appcompat.app.AppCompatActivity
  com.redrum.todo.activity.TodoDetail o-- com.redrum.todo.model.Todo : todo
  com.redrum.todo.activity.TodoEdit -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
